# note

./: .gitignore  Readme.md
codes/: .clang-tidy  CMakeLists.txt
codes/cmake/: lists.cmake
codes/src/: CMakeLists.txt
codes/src/lists/: arrayList.cpp  arrayList.hpp  linkList.hpp
codes/tests/: CMakeLists.txt  TestLinkList.cpp  TestLists.cpp
english/grammar/: time&tense.md  介词.md  动词语气.md  助动词&情态动词.md  独立主格.md  英语从句.md  谓语动词.md  非谓语动词.md
english/writting/: 写作功能句.md
math/: 1.函数.md  10.多元积分学及其应用.md  2.极限.md  3.导数.md  4.积分.md  5.常微分方程.md  6.多元函数微分.md  7.二重积分.md  8.无穷级数.md  9.向量代数.md
模拟电路/: routine.md
线性代数/: 1.行列式.md  2.矩阵.md
